sandbox/output
GildedRoseTest.java:24: error: ')' expected
            new Item("Normal item", 8, 10)
                                          ^
GildedRoseTest.java:25: error: ';' expected
            new Item("Aged Brie", 2, 5)
                                       ^
2 errors
